# Textractor

extensions/: CMakeLists.txt  googletranslate.cpp
