cmake_policy(SET CMP0037 NEW)

add_library(BingTranslate MODULE bingtranslate.cpp translatewrapper.cpp network.cpp extensionimpl.cpp)
add_library(CopyToClipboard MODULE copyclipboard.cpp extensionimpl.cpp)
add_library(DeepLTranslate MODULE deepltranslate.cpp translatewrapper.cpp network.cpp extensionimpl.cpp)
add_library(DevToolsDeepLTranslate MODULE devtoolsdeepltranslate.cpp devtools.cpp translatewrapper.cpp network.cpp extensionimpl.cpp)
add_library(DevToolsPapagoTranslate MODULE devtoolspapagotranslate.cpp devtools.cpp translatewrapper.cpp network.cpp extensionimpl.cpp)
add_library(DevToolsSystranTranslate MODULE devtoolssystrantranslate.cpp devtools.cpp translatewrapper.cpp network.cpp extensionimpl.cpp)
add_library(ExtraNewlines MODULE extranewlines.cpp extensionimpl.cpp)
add_library(ExtraWindow MODULE extrawindow.cpp extensionimpl.cpp)
add_library(GoogleTranslate MODULE googletranslate.cpp translatewrapper.cpp network.cpp extensionimpl.cpp)
add_library(Lua MODULE lua.cpp extensionimpl.cpp)
add_library(RegexFilter MODULE regexfilter.cpp extensionimpl.cpp)
add_library(RegexReplacer MODULE regexreplacer.cpp extensionimpl.cpp)
add_library(RemoveRepeatedCharacters MODULE removerepeatchar.cpp extensionimpl.cpp)
add_library(RemoveRepeatedPhrases MODULE removerepeatphrase.cpp extensionimpl.cpp)
add_library(RemoveRepeatedPhrases2 MODULE removerepeatphrase2.cpp extensionimpl.cpp)
add_library(Remove30RepeatedSentences MODULE removerepeatsentence.cpp extensionimpl.cpp)
add_library(Replacer MODULE replacer.cpp extensionimpl.cpp)
add_library(Styler MODULE styler.cpp extensionimpl.cpp)
add_library(ThreadLinker MODULE threadlinker.cpp extensionimpl.cpp)

target_precompile_headers(BingTranslate REUSE_FROM pch)
target_precompile_headers(CopyToClipboard REUSE_FROM pch)
target_precompile_headers(DeepLTranslate REUSE_FROM pch)
target_precompile_headers(DevToolsDeepLTranslate REUSE_FROM pch)
target_precompile_headers(DevToolsPapagoTranslate REUSE_FROM pch)
target_precompile_headers(DevToolsSystranTranslate REUSE_FROM pch)
target_precompile_headers(ExtraNewlines REUSE_FROM pch)
target_precompile_headers(ExtraWindow REUSE_FROM pch)
target_precompile_headers(GoogleTranslate REUSE_FROM pch)
target_precompile_headers(Lua REUSE_FROM pch)
target_precompile_headers(RegexFilter REUSE_FROM pch)
target_precompile_headers(RegexReplacer REUSE_FROM pch)
target_precompile_headers(RemoveRepeatedCharacters REUSE_FROM pch)
target_precompile_headers(RemoveRepeatedPhrases REUSE_FROM pch)
target_precompile_headers(RemoveRepeatedPhrases2 REUSE_FROM pch)
target_precompile_headers(Remove30RepeatedSentences REUSE_FROM pch)
target_precompile_headers(Replacer REUSE_FROM pch)
target_precompile_headers(Styler REUSE_FROM pch)
target_precompile_headers(ThreadLinker REUSE_FROM pch)

target_link_libraries(BingTranslate winhttp Qt5::Widgets)
target_link_libraries(CopyToClipboard winhttp Qt5::Widgets)
target_link_libraries(DeepLTranslate winhttp Qt5::Widgets)
target_link_libraries(DevToolsDeepLTranslate shell32 winhttp Qt5::Widgets Qt5::WebSockets)
target_link_libraries(DevToolsPapagoTranslate shell32 winhttp Qt5::Widgets Qt5::WebSockets)
target_link_libraries(DevToolsSystranTranslate shell32 winhttp Qt5::Widgets Qt5::WebSockets)
target_link_libraries(ExtraWindow Qt5::Widgets)
target_link_libraries(GoogleTranslate winhttp Qt5::Widgets)
target_link_libraries(Lua lua53 Qt5::Widgets)
target_link_libraries(RegexFilter Qt5::Widgets)
target_link_libraries(Styler Qt5::Widgets)
target_link_libraries(ThreadLinker Qt5::Widgets)

add_custom_target(Cleaner ALL COMMAND del *.xdll WORKING_DIRECTORY ${CMAKE_FINAL_OUTPUT_DIRECTORY})

if (NOT EXISTS ${CMAKE_FINAL_OUTPUT_DIRECTORY}/Qt5WebSockets.dll AND NOT EXISTS ${CMAKE_FINAL_OUTPUT_DIRECTORY}/Qt5WebSocketsd.dll)
    add_custom_command(TARGET DevToolsDeepLTranslate
        POST_BUILD
        COMMAND ${CMAKE_COMMAND} -E remove_directory "${CMAKE_CURRENT_BINARY_DIR}/windeployqt"
        COMMAND set PATH=%PATH%$<SEMICOLON>${qt5_install_prefix}/bin
        COMMAND Qt5::windeployqt --dir ${CMAKE_FINAL_OUTPUT_DIRECTORY} "${CMAKE_FINAL_OUTPUT_DIRECTORY}/DevToolsDeepLTranslate.dll"
    )
endif() 
